feat[api]: add tag (#28)
* add `IsErrorConstraintViolated` and `IsInvalidParamError` for errors

* feat[api]: add tag

* update api doc
