# article/controller/request.go
@@ -4,6 +4,8 @@ import (
 	"strconv"
 	"victorzhou123/vicblog/article/app"
 	"victorzhou123/vicblog/article/domain/category/entity"
+	tagent "victorzhou123/vicblog/article/domain/tag/entity"
+	"victorzhou123/vicblog/article/domain/tag/repository"
 )
 
 type reqCategory struct {
@@ -33,4 +35,22 @@ func (req *reqCategoryList) toCmd() (cmd app.CategoryListCmd, err error) {
 	}
 
 	return
+}
+
+type reqTag struct {
+	Names []string `json:"names"`
+}
+
+func (req *reqTag) toTagNames() (repository.TagNames, error) {
+	tagNames := make([]tagent.TagName, len(req.Names))
+
+	var err error
+	for i := range req.Names {
+		tagNames[i], err = tagent.NewTagName(req.Names[i])
+		if err != nil {
+			return repository.TagNames{}, err
+		}
+	}
+
+	return repository.TagNames{Names: tagNames}, nil
 }
